# API_Rest_Tigre

./: .coverage  .gitignore  Makefile  README.md  animals.db  app.py  comparison.md  database.py  logsWSL.txt  models.py  prompts.txt  requirements.txt  secrets.enc.yaml  secrets.yaml
poetry/: .projenrc.py  pyproject.toml
tests/: test_functional.py  test_integration.py  test_performance.py  test_security.py  test_unit.py
